Dubey | Fix login response to be similar to HAS response
